Fixed mouse capture issue

--- a/emscripten/shell.html
+++ b/emscripten/shell.html
@@ -28,8 +28,10 @@
         justify-content: center;
         align-content: center;
         font-weight: bold;
-        color: rgb(255, 3, 3);
+        font-size: 3.2vw;
+        color: rgb(255, 0, 0);
         position: absolute;
+        z-index: -1;
       }
       #output {
         width: 100%;
