--- a/emscripten/shell.html
+++ b/emscripten/shell.html
@@ -43,6 +43,7 @@
             align-content: center;
             font-weight: bold;
             font-size: 3.2vw;
+            font-family: Arial, Helvetica, sans-serif;
             color: rgb(0, 110, 255);
             position: absolute;
             z-index: -1;
