Fixed Firefox image dragging

--- a/emscripten/shell.html
+++ b/emscripten/shell.html
@@ -22,6 +22,8 @@
             width: 100%;
             height: 100%;
             display: block;
+            user-select: none;
+            -webkit-user-drag: none;
         }
 
         .center {
@@ -98,6 +100,8 @@
             })(),
             canvas: (() => {
                 var canvas = document.getElementById('canvas');
+
+                canvas.ondragstart = (e) => e.preventDefault();
 
                 // As a default initial behavior, pop up an alert when webgl context is lost. To make your
                 // application robust, you may want to override this behavior before shipping!
